--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -28,6 +28,13 @@
             android:text="开始" />
 
         <Button
+            android:id="@+id/record"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="录制"/>
+
+        <Button
             android:id="@+id/swCam"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -48,7 +55,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginRight="20dp"
-        android:text="rtmp://192.168.31.126:1935/live/livestream"
+        android:text="rtmp://119.23.28.204:1935/live/livestream"
         android:padding="10dp"
         android:textColor="#FFFFFF"
         android:textSize="14dp" />
